--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,10 +8,19 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click <a href="/hello">here</a> to see content created by server code.</p>
-      <p>Click here to get a random message:</p>
+      <img src="images/my_image.jpg" />
+      <h1>Adwait Kulkarni</h1>
+      <h3>Hello!</h3>
+      <p>I am a second-year computer science major at the University of British Columbia in Vancouver.</p>
+      <p>Below are some of the projects I have built</p>
+      <ul>
+          <li>User Management System</li>
+          <li>General Knowledge Quiz Application</li>
+          <li>Netflix UI Clone</li>
+      </ul>
+      <p>My Social Links:</p>
+      <a href="https://linkedin.com/in/AdwaitKulkarni58/">LinkedIn</a>
+      <a href="https://github.com/AdwaitKulkarni58">GitHub</a>      
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
     </div>
