Added fetch functionality to servlet

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -21,7 +21,7 @@
       <p>My Social Links:</p>
       <a href="https://linkedin.com/in/AdwaitKulkarni58/">LinkedIn</a>
       <a href="https://github.com/AdwaitKulkarni58">GitHub</a>      
-      <button onclick="addRandomGreeting()">Hello</button>
+      <button onclick="showGreeting()">Click Me!</button>
       <div id="greeting-container"></div>
     </div>
   </body>
