Added logging functionality

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -18,6 +18,12 @@
           <li>General Knowledge Quiz Application</li>
           <li>Netflix UI Clone</li>
       </ul>
+      <form action="/form-handler" method="POST">
+        <p>Let me know your message!</p>
+        <textarea name="text-input"></textarea>
+        <br/>
+        <input type="submit" />
+      </form>      
       <p>My Social Links:</p>
       <a href="https://linkedin.com/in/AdwaitKulkarni58/">LinkedIn</a>
       <a href="https://github.com/AdwaitKulkarni58">GitHub</a>      
