Added some styling

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,6 +7,9 @@
     <script src="script.js"></script>
   </head>
   <body>
+    <div id="heading">
+        My Portfolio Website!
+    </div>  
     <div id="content">
       <img src="images/my_image.jpg" />
       <h1>Adwait Kulkarni</h1>
@@ -32,8 +35,8 @@
         <button>Submit</button>
       </form>      
       <p>My Social Links:</p>
-      <a href="https://linkedin.com/in/AdwaitKulkarni58/">LinkedIn</a>
-      <a href="https://github.com/AdwaitKulkarni58">GitHub</a>      
+      <a href="https://linkedin.com/in/AdwaitKulkarni58/" target="blank">LinkedIn</a>
+      <a href="https://github.com/AdwaitKulkarni58" target="blank">GitHub</a>      
       <button onclick="showGreeting()">Click Me!</button>
       <div id="greeting-container"></div>
     </div>
